# ai-service

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  MIGRATION.md  README.md  RENDER_DEPLOYMENT.md  app.py  pyproject.toml  render.yaml  requirements.txt
.agent/tasks/: IMPLEMENTATION_COMPLETE.md  fastapi-migration-plan.md
.claude/: settings.local.json
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: compare.py  face.py  health.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/services/: __init__.py  embedding.py  face_analysis.py  image_processing.py
app/workers/: __init__.py  ml_worker.py
